--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/anasbn3issa/hapi-cemiar-mini-project#readme",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "@hapi/inert": "^7.0.0",
     "hapi-geo-locate": "^4.1.1",
     "nodemon": "^2.0.20"
   }
