--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
     "@hapi/inert": "^7.0.0",
+    "@hapi/vision": "^7.0.0",
+    "handlebars": "^4.7.7",
     "hapi-geo-locate": "^4.1.1",
     "nodemon": "^2.0.20"
   }
